fix: corrigindo todos os erros possiveis e impossiveis